--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Hello world!</title>
+    <style>
+        /* ChatGPT: Center content */
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Set the height of the body to be 100% of the viewport height */
+            margin: 0;
+        }
+        /* ChatGPT: Style for the header to make it bold and stay at the top */
+        header {
+            position: fixed; /* Fixed position at the top of the viewport */
+            top: 0; /* Align the header to the top of the viewport */
+            width: 100%; /* Full width */
+            text-align: center; /* Center the text inside the header */
+            font-weight: bold; /* Make the text bold */
+            background-color: white; /* Set background color to white */
+            padding: 10px 0; /* Add some padding */
+        }
 
+        /* ChatGPT: Ensure the div contents are also centered */
+        div {
+            display: flex;
+            flex-direction: column; /* Stack items vertically */
+            align-items: center; /* Center items horizontally */
+        }
+
+        /* ChatGPT: Style for link button */
+        .button {
+            background-color: #312520; /* 煤黑 background */
+            border: none; /* No border */
+            color: #F0F0F4; /* 铅白 text */
+            padding: 10px 20px; /* Padding around the text */
+            text-align: center; /* Center text */
+            text-decoration: none; /* No underline */
+            display: inline-block; /* Fit content width */
+            font-size: 16px; /* Text size */
+            margin: 10px 2px; /* Margin for spacing */
+            cursor: pointer; /* Pointer cursor on hover */
+            border-radius: 5px; /* Rounded corners */
+        }
+
+    </style>
+</head>
+<body>
+    <!-- ChatGPT: Added header tag for hello world text -->
+    <header>
+        <p>hello, world</p>
+        <!-- ChatGPT: Added link button -->
+        <a href="/albums/index.html" class="button">Visit Albums</a>
+        <a href="/twitter-remove-retweets.html" class="button">removeRetweets</a>
+        <a href="/one_time_trade_calculator.html" class="button">tradeCalculator</a>
+        <a href="/sina7x24.html" class="button">sina7x24</a>
+        <a href="/sina7x24_dev.html" class="button">sina7x24_dev</a>
+        <a href="/option25.html" class="button">option25</a>
+        <a href="/stock_holdings_visual.html" class="button">stock_holdings_visual</a>
+    </header>
+    <div>
+        <!-- ChatGPT: Random image codes-->
+        <!-- Unsplash API from https://picsum.photos/ -->
+        <img id="randomImage" src="https://random-image-pepebigotes.vercel.app/api/random-image" alt="Random Image">
+    </div>
+</body>
+</html>
+
+<!-- Hello world! codes from: https://en.wikipedia.org/wiki/HTML -->
+<!-- Unsplash API from: https://www.reddit.com/r/unsplash/comments/s13x4h/what_happened_to_sourceunsplashcom/ -->
+<!-- Unsplash API from: https://archive.md/hwCv1 -->
+<!-- Unsplash API NOT WORKING from: https://forum.codewithmosh.com/t/html-layout-exersize-unsplash-random-image-not-working/28244 -->
+<!-- Colors from https://www.allidylls.com/spectra -->
