--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <a href="/sina7x24_dev.html" class="button">sina7x24_dev</a>
         <a href="/option25.html" class="button">option25</a>
         <a href="/stock_holdings_visual.html" class="button">stock_holdings_visual</a>
+		<a href="/stock_holdings_noapi.html" class="button">stock_holdings_noapi</a>
     </header>
     <div>
         <!-- ChatGPT: Random image codes-->
