--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <a href="/option25.html" class="button">option25</a>
         <a href="/stock_holdings_visual.html" class="button">stock_holdings_visual</a>
 		<a href="/stock_holdings_noapi.html" class="button">stock_holdings_noapi</a>
+		<a href="/container_load.html" class="button">containerLoading</a>
     </header>
     <div>
         <!-- ChatGPT: Random image codes-->
